--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -133,15 +133,20 @@ header {
 
   .presentacion-content-mis_datos {
     display: flex;
+
+    .presentacion-content-mis_datos-texto{
+      max-width: 80%;
+    }
     
     .presentacion-content-mis_datos-imagen {
       margin: 0;
       padding: 0;
       text-align: center;
-      
-      img {
-        width: 70%;
-        max-width: 640px;
+      svg {
+        max-width: 100%; /* El ancho máximo será igual al ancho de la ventana */
+        height: auto;     /* Mantiene la proporción al ajustar el ancho */
+        margin-top: -5em;
+        margin-bottom: -5em;
       }
     }
   }
@@ -259,7 +264,7 @@ footer {
     max-width: 90%;
   }
   
-  .index-content, .categoria-content, .detalle-content, .enlaces-content, .presentacion-content {
+  .index-content, .categoria-content, .detalle-content, .enlaces-content, .presentacion-content, .presentacion-content-mis_datos {
     width: 90vw;
     display: flex;
     flex-direction: column;
@@ -281,6 +286,10 @@ footer {
       width: 100%;
       height: 100%;
     }
+    .presentacion-content-mis_datos-texto{
+      max-width: 100% !important;
+    }
+
   }
 
   footer{
