--- a/src/index.pug
+++ b/src/index.pug
@@ -36,7 +36,8 @@ html(lang="es")
                           src=`${image.src}.jpg`
                           srcset=`${image.src}-little.jpg 768w`
                           sizes="(max-width: 768px) 100vw"
-                          alt=image.alt)
+                          alt=image.alt
+                          class="clip-path_img")
                     
                     button.prev &lt;
                     button.next &gt;
