--- a/src/detalle_año_1234.pug
+++ b/src/detalle_año_1234.pug
@@ -14,16 +14,34 @@ html(lang="es")
           .detalle-content
             h1 Almonaster la Real en el Año 1234: Fundación y Orígenes
 
-            figure
-              picture
-                source(srcset="images/interior-mezquita-de-almonaster-la-real-little.webp" type="image/webp" media="(max-width: 768px)") 
-                source(srcset="images/interior-mezquita-de-almonaster-la-real.webp" type="image/webp" media="(min-width: 769px)")
+            figure.detalle-image-grid
+              picture.large-image
+                source(srcset="images/plaza-constitucion-almonaster-la-real-little.webp" type="image/webp" media="(max-width: 768px)") 
+                source(srcset="images/plaza-constitucion-almonaster-la-real.webp" type="image/webp" media="(min-width: 769px)")
                 img(
-                  src="images/interior-mezquita-de-almonaster-la-real.jpg"
-                  srcset="images/interior-mezquita-de-almonaster-la-real-little.jpg 768w"
+                  src="images/plaza-constitucion-almonaster-la-real.jpg"
+                  srcset="images/plaza-constitucion-almonaster-la-real-little.jpg 768w"
                   sizes="(max-width: 768px) 100vw"
-                  alt="Mezquita de Almonaster la Real")  
-              figcaption Vista del interior de la mezquita de Almonaster la Real.
+                  alt="Plaza de la Constitución de Almonaster la Real")
+
+              picture.small-image-1
+                source(srcset="images/Almonaster-la-real-1-1-little.webp" type="image/webp" media="(max-width: 768px)") 
+                source(srcset="images/Almonaster-la-real-1-1.webp" type="image/webp" media="(min-width: 769px)")
+                img(
+                  src="images/Almonaster-la-real-1-1.jpg"
+                  srcset="images/Almonaster-la-real-1-1.jpg 768w"
+                  sizes="(max-width: 768px) 100vw"
+                  alt="Vista general de Almonaster la Real (imagen secundaria 1)")
+
+              picture.small-image-2
+                source(srcset="images/index_background_v1.webp" type="image/webp" media="(max-width: 768px)") 
+                source(srcset="images/index_background_v1.webp" type="image/webp" media="(min-width: 769px)")
+                img(
+                  src="images/index_background_v1.jpg"
+                  srcset="images/index_background_v1-little.jpg 768w"
+                  sizes="(max-width: 768px) 100vw"
+                  alt="Vista general de Almonaster la real (imagen secundaria 2)")
+            figcaption Vistas de Almonaster la Real.
 
             p En el año 1234, durante el avance de la Reconquista, Almonaster la Real fue incorporada al Reino de Castilla. Aunque no se tiene una fecha exacta para su fundación, este período marcó un cambio significativo en la región, ya que pasó del dominio musulmán al control cristiano. El proceso de reconquista liderado por el rey Fernando III de Castilla no solo buscaba recuperar territorios, sino también consolidar el poder cristiano en zonas estratégicas como la Sierra de Huelva. Almonaster, por su ubicación elevada y su fortaleza natural, se convirtió en un importante punto de control militar.
 
