--- a/src/detalle_año_1812.pug
+++ b/src/detalle_año_1812.pug
@@ -14,16 +14,34 @@ html(lang="es")
           .detalle-content
             h1 Almonaster la Real en el Año 1812: Guerra de Independencia
 
-            figure
-              picture
+            figure.detalle-image-grid
+              picture.large-image
                 source(srcset="images/index_background_v1-little.webp" type="image/webp" media="(max-width: 768px)") 
                 source(srcset="images/index_background_v1.webp" type="image/webp" media="(min-width: 769px)")
                 img(
                   src="images/index_background_v1.jpg"
                   srcset="images/index_background_v1-little.jpg 768w"
                   sizes="(max-width: 768px) 100vw"
-                  alt="Vista general de Almonaster la Real") 
-              figcaption Vista general de Almonaster la Real.
+                  alt="Vista general del Almonaster la Real")
+
+              picture.small-image-1
+                source(srcset="images/almonaster-blog-05-little.webp" type="image/webp" media="(max-width: 768px)") 
+                source(srcset="images/almonaster-blog-05.webp" type="image/webp" media="(min-width: 769px)")
+                img(
+                  src="images/almonaster-blog-05.jpg"
+                  srcset="images/almonaster-blog-05.jpg 768w"
+                  sizes="(max-width: 768px) 100vw"
+                  alt="Puente de la tinajería (imagen secundaria 1)")
+
+              picture.small-image-2
+                source(srcset="images/arcos-mezquinta.webp" type="image/webp" media="(max-width: 768px)") 
+                source(srcset="images/arcos-mezquinta.webp" type="image/webp" media="(min-width: 769px)")
+                img(
+                  src="images/arcos-mezquinta.jpg"
+                  srcset="images/arcos-mezquinta-little.jpg 768w"
+                  sizes="(max-width: 768px) 100vw"
+                  alt="Vista a través de la puerta de la mezquinta de Almonaster la real (imagen secundaria 2)")
+            figcaption Vistas de Almonaster la Real.
 
             p En 1812, durante la Guerra de Independencia Española, la localidad de Almonaster la Real, se vio afectada por los conflictos que asolaban el país. Aunque no fue escenario de grandes batallas, la región jugó un papel estratégico en la resistencia local contra las tropas napoleónicas. Almonaster, con su terreno montañoso y su ubicación apartada, ofrecía un refugio seguro para las partidas de guerrilleros que luchaban por liberar el territorio de la ocupación francesa. La población local, unida por un fuerte sentido de pertenencia y lealtad a la Corona española, participó activamente en la resistencia.
 
