--- a/src/detalle_siglo_IX.pug
+++ b/src/detalle_siglo_IX.pug
@@ -14,16 +14,34 @@ html(lang="es")
           .detalle-content
             h1 Almonaster la Real. Siglo IX: Edificación de la Mezquita
 
-            figure
-              picture
+            figure.detalle-image-grid
+              picture.large-image
                 source(srcset="images/index_background_v3-little.webp" type="image/webp" media="(max-width: 768px)") 
                 source(srcset="images/index_background_v3.webp" type="image/webp" media="(min-width: 769px)")
                 img(
                   src="images/index_background_v3.jpg"
                   srcset="images/index_background_v3-little.jpg 768w"
                   sizes="(max-width: 768px) 100vw"
-                  alt="Mezquita de Almonaster la Real") 
-              figcaption Vista del exterior de la mezquita de Almonaster la Real.
+                  alt="Mezquita de Almonaster la Real")
+
+              picture.small-image-1
+                source(srcset="images/mezquita-de-almonaster-la-real-little.webp" type="image/webp" media="(max-width: 768px)") 
+                source(srcset="images/mezquita-de-almonaster-la-real.webp" type="image/webp" media="(min-width: 769px)")
+                img(
+                  src="images/mezquita-de-almonaster-la-real.jpg"
+                  srcset="images/mezquita-de-almonaster-la-real-little.jpg 768w"
+                  sizes="(max-width: 768px) 100vw"
+                  alt="Mezquita de Almonaster la Real (imagen secundaria 1)")
+
+              picture.small-image-2
+                source(srcset="images/Mezquita_de_al-Monastir_Haram.webp" type="image/webp" media="(max-width: 768px)") 
+                source(srcset="images/Mezquita_de_al-Monastir_Haram.webp" type="image/webp" media="(min-width: 769px)")
+                img(
+                  src="images/Mezquita_de_al-Monastir_Haram.jpg"
+                  srcset="images/Mezquita_de_al-Monastir_Haram-little.jpg 768w"
+                  sizes="(max-width: 768px) 100vw"
+                  alt="Mezquita de Almonaster la Real (imagen secundaria 2)")
+            figcaption Vistas de la mezquita de Almonaster la Real.
 
             p La mezquita de Almonaster la Real, ubicada en la Sierra de Huelva, fue construida entre los años 711 y 929, durante el periodo del Emirato de Córdoba. Este período coincidió con la expansión del dominio musulmán en la península ibérica, cuando se desarrollaron importantes obras arquitectónicas para consolidar el poder islámico. La mezquita de Almonaster, que se construyó sobre una antigua basílica visigoda, refleja la práctica común de reutilizar estructuras preexistentes, adaptándolas a las necesidades religiosas de los nuevos gobernantes. Esta edificación es uno de los pocos ejemplos que se conservan de mezquitas rurales en España.
 
